# OpenMCPanel

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  lint-backend.yml  lint-frontend.yml
src/: main.rs
src/util/: dependencies.rs  docker.rs  logger.rs  mod.rs
src/web/: api.rs  middleware.rs  mod.rs  server.rs
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml
web/src/: index.tsx  style.css
web/src/components/: Button.css  Button.tsx  Header.tsx  Sidebar.css  Sidebar.tsx
web/src/dialogs/: ConfigDialog.tsx  DeleteDialog.css  DeleteDialog.tsx  Dialog.css  Dialog.tsx
web/src/pages/deploy/: Deploy.css  Deploy.tsx
web/src/pages/home/: Home.css  Home.tsx
web/src/pages/manage/: Manage.tsx  ManageList.css  ManageList.tsx
web/src/pages/monitor/: LogWindow.css  LogWindow.tsx  Monitor.css  Monitor.tsx  StatCell.css  StatCell.tsx  StatRow.css  StatRow.tsx
web/src/util/: dialog.ts  docker.ts  icon.tsx  server_consts.ts  server_consts.tsx
