[package]
name = "open_mc_panel"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = "debuginfo"
opt-level = "s"

# Linker options
[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]

[target.x86_64-apple-darwin]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]

[target.aarch64-apple-darwin]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", default-features = false, features = ["tokio1"]}
bollard = "0.16.1"
chrono = "0.4.37"
colored = "2.1.0"
dirs = "5.0.1"
gumdrop = "0.8.1"
include_dir = "0.7.3"
mcping = "0.2.0"
mime_guess = "2.0.4"
pico-args = "0.5.0"
rpassword = "7.3.1"
serde = "1.0.197"
serde_json = "1.0.115"
sha2 = "0.10.8"
tide = "0.16.0"
# https://github.com/chrisdickinson/tide-http-auth/issues/10
tide-http-auth = { git = "https://github.com/Atmelfan/tide-http-auth/", branch = "latest" }
